--- a/src/components/AddListForm/styles.module.scss
+++ b/src/components/AddListForm/styles.module.scss
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: row;
   gap: 4px;
+  height: 40px;
 }
 
 .confirm {
@@ -45,10 +46,11 @@
 .cancel {
   color: #b6c2cf;
   border: none;
-  padding: 8px;
   border-radius: 4px;
   background-color: transparent;
   cursor: pointer;
+  line-height: 0;
+  width: 40px;
 
   &:hover {
     background-color: #a6c5e229;
